2005-06-18  Don Porter	<dgp@users.sourceforge.net>

	*** 8.4.11 TAGGED FOR RELEASE ***

	* changes:		Update changes for 8.4.11 release

	* README:		Bump version number to 8.4.11
	* generic/tk.h:
	* macosx/Wish.pbproj/project.pbxproc:
	* unix/configure.in:
	* win/configure.in:

	* unix/configure.in:	Updated LOCALES to cover all msgs catalogs.

	* unix/configure:	autoconf
	* win/configure:

2005-06-04  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkCanvas.c (SearchUids): Move all global data into
	protected storage to stop cross-thread issues. [Bug 1114977] 

2005-06-03  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkConsole.c (Tk_CreateConsoleWindow, TkConsolePrint):
	Transmit the ConsoleInfo through AssocData, so renaming [console]
	won't make things break. [Bug 1016385]

2005-06-03  Daniel Steffen  <das@users.sourceforge.net>

	*** 8.4.10 TAGGED FOR RELEASE ***

	* macosx/Makefile: fixed 'embedded' target.

2005-06-02  Jim Ingham  <jingham@apple.com>

        Another patch from M. Kirkham.
	
	* macosx/tkMacOSXScrlbr.c (ThumbActionProc, ScrollBarBindProc):
	Record the first mouse down point, and compute differences from
	that, rather than getting the mouse down each time through the
	loop.  The old method would get fooled if you moved the mouse less
	than a text line height in the text widget.
	[Bug 1083728]
	
2005-06-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* changes: update for 8.4.10 release (porter)

2005-05-31  Mo DeJong  <mdejong@users.sourceforge.net>

	* macosx/tkMacOSXWm.c (TkWmStackorderToplevelWrapperMap, TkWmStackorderToplevel):
	* unix/tkUnixWm.c (TkWmStackorderToplevelWrapperMap, TkWmStackorderToplevel):
	* win/tkWinWm.c (TkWmStackorderToplevelWrapperMap, TkWmStackorderToplevel):
	Fix panic in wm stackorder when a toplevel is created on another
	diplay. The code now ignores toplevels that have a display
	that does not match the display of the parent window.
	[Bug 1152809]

2005-05-30  Jeff Hobbs  <jeffh@ActiveState.com>
